--- a/LibGetDownloaderCli/LibGetDownloaderCli.csproj
+++ b/LibGetDownloaderCli/LibGetDownloaderCli.csproj
@@ -3,6 +3,11 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Authors>noahc3</Authors>
+    <Company>noahc3</Company>
+    <PackageProjectUrl>https://github.com/noahc3/LibGetDownloader/</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/noahc3/LibGetDownloader.git</RepositoryUrl>
+    <RepositoryType>Git</RepositoryType>
   </PropertyGroup>
 
   <ItemGroup>
