--- a/LibGetDownloaderCli/LibGetDownloaderCli.csproj
+++ b/LibGetDownloaderCli/LibGetDownloaderCli.csproj
@@ -9,6 +9,7 @@
     <RepositoryUrl>https://github.com/noahc3/LibGetDownloader.git</RepositoryUrl>
     <RepositoryType>Git</RepositoryType>
     <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
